--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ html, body, #root {
 
 @font-face {
   font-family: 'Kabel'; 
-  src: url('public/KabelITCbyBT-Book.woff') format('woff');
+  src: url('/KabelITCbyBT-Book.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -249,7 +249,7 @@ html, body, #root {
   align-items: center;
   justify-content: center;
   max-width: 450px;
-  max-height: 450px;
+  height: 450px;
   padding: 0px;
   margin: auto;
   position: relative;
