--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 html, body, #root {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
